##Loki
SET(LOKI_SRCS Loki/SmallObj.cc)
INCLUDE_DIRECTORIES(${IPv6Suite_SOURCE_DIR}/Util/Loki ${IPv6Suite_SOURCE_DIR}/IP/IPv6/Generic ${IPv6Suite_SOURCE_DIR}/IP/IPv6/Generic ${IPv6Suite_SOURCE_DIR}/IP/DualStack ${IPv6Suite_SOURCE_DIR}/World ${IPv6Suite_SOURCE_DIR}/Util)

#Adhoc by Nicholas Concer
SET(ADHOC_SRCS adHocSim/randomWalk.cc adHocSim/randomWP.cc)
INCLUDE_DIRECTORIES(${IPv6Suite_SOURCE_DIR}/Util/adHocSim/h ${IPv6Suite_SOURCE_DIR}/PHY ${IPv6Suite_SOURCE_DIR}/Util/XML) 

##Util 
SET(UTIL_SRCS TimerConstants AveragingList opp_utils.cc ${LOKI_SRCS} ${ADHOC_SRCS})

RELEASE_SOURCES("${UTIL_SRCS}")
ADD_LIBRARY(Util ${UTIL_SRCS})

IF(LIBCWD_DEBUG)
  SET(DEBUG_SRCS debug libcwdsetup)
  SET(UTIL_SRCS_RELEASE ${UTIL_SRCS} ${DEBUG_SRCS})
  RELEASE_FILES_APPEND("${UTIL_SRCS_RELEASE}")
  SET_SOURCE_FILES_PROPERTIES(${UTIL_SRCS_RELEASE} COMPILE_FLAGS "${COMPILER_WARNINGS}")
  ADD_LIBRARY(Channels ${DEBUG_SRCS})
ENDIF(LIBCWD_DEBUG)
