SET(PING6_SRCS Ping6App.cc )
SET(PING_NED_INCLUDES ${IPv6Suite_SOURCE_DIR}/Applications/Ping6/)
OPP_WRAP_NEDC (Ping6 PING_NED_INCLUDES Ping6App.ned)

RELEASE_SOURCES("${PING6_SRCS}")
#Does not appear to work
#OUTPUT_REQUIRED_FILES("Ping6App.cc" ${CMAKE_CURRENT_BINARY_DIR}/required)
ADD_LIBRARY(Ping6 ${PING6_SRCS}  ${GENERATED_NEDC_FILES})
INCLUDE_DIRECTORIES(${TOPDIR}/Util ${TOPDIR}/IP/DualStack ${TOPDIR}/IP/IPv6/Generic)
