
SET(UDP_SRCS UDPProcessing6.cc )
OPP_WRAP_NEDC(UDP UDP_NED_INCLUDES UDPProcessing6.ned UDPApplication.ned)
OPP_WRAP_MSGC(UDP . UDPMessages.msg )
SET(UDP_SRCS ${UDP_SRCS} UDPApplication.cc)

RELEASE_SOURCES("${UDP_SRCS}")
ADD_LIBRARY(UDP ${UDP_SRCS}  ${GENERATED_NEDC_FILES} ${GENERATED_MSGC_FILES} )
 
INCLUDE_DIRECTORIES(${TOPDIR}/IP/DualStack ${TOPDIR}/IP/IPv6/Generic 
  ${TOPDIR}/Util ${CMAKE_CURRENT_BINARY_DIR})
#  ${TOPDIR}/IP/IPv4/UDP ${TOPDIR}/IP/IPv4/Interface
