SET(XML_SRCS XMLCommon)

IF(NOT USE_XERCES)
  IF(OPP_VERSION3_TEST)
    #omnetpp-3.0pre_20040914-11 to be exact
    SET(XML_SRCS ${XML_SRCS}  XMLOmnetParser)
  ELSE(OPP_VERSION3_TEST)
    IF(NOT USE_XMLWRAPP)
      MESSAGE(SEND_ERROR "You'll need to upgrade to latest omnetpp 3 snapshot for its XML parser")
    ENDIF(NOT USE_XMLWRAPP)
  ENDIF(OPP_VERSION3_TEST)
ENDIF(NOT USE_XERCES)


IF(USE_XMLWRAPP)
  SET(XML_SRCS ${XML_SRCS} XMLWrapParser.cc IPv6XMLWrapManager)
ENDIF(USE_XMLWRAPP)
IF(USE_XERCES)
  SET(XML_SRCS ${XML_SRCS} DOMTreeErrorReporter.cc XMLParser.cc IPv6XMLParser.cc
      IPv6XMLManager.cc )
ENDIF(USE_XERCES)

RELEASE_SOURCES("${XML_SRCS}")
ADD_LIBRARY(XML ${XML_SRCS})

INCLUDE_DIRECTORIES(${XERCESROOT}/include ${TOPDIR}/Util/ ${TOPDIR}/IP/DualStack
${TOPDIR}/IP/IPv6/Generic ${TOPDIR}/PHY ${TOPDIR}/NetworkInterfaces ${TOPDIR}/NetworkInterfaces/Ethernet ${TOPDIR}/World ${TOPDIR}/Util/Loki)

IF(BUILD_MOBILITY)
  INCLUDE_DIRECTORIES(${TOPDIR}/NetworkInterfaces/Wireless)
  INCLUDE_DIRECTORIES(${TOPDIR}/IP/IPv6/MIPv6)
  INCLUDE_DIRECTORIES( ${TOPBINDIR}/NetworkInterfaces)
ENDIF(BUILD_MOBILITY)

IF(BUILD_MOBILITY AND BUILD_HMIP)
  INCLUDE_DIRECTORIES(${TOPDIR}/IP/IPv6/HMIPv6)
ENDIF(BUILD_MOBILITY AND BUILD_HMIP)
